--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Todo microservice system: <link>https://github.com/LukasDS/todo</link>
+Todo microservice system: <a href="https://github.com/LukasDS/todo">https://github.com/LukasDS/todo</a>
