--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Todo microservice system: <a href="https://github.com/LukasDS/todo">https://github.com/LukasDS/todo</a>
+<h1>Lukas Daugaard Schröder</h1>
+As a Full-Stack software engineer with a specialization in AI I am enthuasiatic in design, development and CI/CD deployment of systems with real user impact.
+
+For in-depth information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a>
+
+<h2>Project List</h2>
+To be completed. For now, here are the links to the open source projects I have made or contributed to:
+<ul>
+  <li>Workout Schedule and Weight Tracking Microservice System: <a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></li>
+  <li>Distributed Real-time Lambda Streaming Processing Pipeline: <a href="https://github.com/danylokravchenko/distributed-stream-pipeline">https://github.com/danylokravchenko/distributed-stream-pipeline</a></li>
+</ul>
