--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Lukas Daugaard Schröder</title>
+  <meta charset="UTF-8">
+</head>
+<body>
 <h1>Lukas Daugaard Schröder</h1>
-As a Full-Stack software engineer with a specialization in AI I am enthuasiatic in design, development and CI/CD deployment of systems with real user impact.
+<p>As a Full-Stack software engineer with a specialization in AI I am enthuasiatic in design, development and CI/CD deployment of systems with real user impact.</p>
 
-For in-depth information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a>
+<p>For in-depth information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
 
 <h2>Project List</h2>
 To be completed. For now, here are the links to the open source projects I have made or contributed to:
@@ -9,3 +16,5 @@ To be completed. For now, here are the links to the open source projects I have 
   <li>Workout Schedule and Weight Tracking Microservice System: <a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></li>
   <li>Distributed Real-time Lambda Streaming Processing Pipeline: <a href="https://github.com/danylokravchenko/distributed-stream-pipeline">https://github.com/danylokravchenko/distributed-stream-pipeline</a></li>
 </ul>
+</body>
+</html>
