--- a/index.html
+++ b/index.html
@@ -10,11 +10,33 @@
 
 <p>For in-depth information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
 
-<h2>Project List</h2>
-To be completed. For now, here are the links to the open source projects I have made or contributed to:
-<ul>
-  <li>Workout Schedule and Weight Tracking Microservice System: <a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></li>
-  <li>Distributed Real-time Lambda Streaming Processing Pipeline: <a href="https://github.com/danylokravchenko/distributed-stream-pipeline">https://github.com/danylokravchenko/distributed-stream-pipeline</a></li>
-</ul>
+<h2>Projects</h2>
+<p>To be completed. For now, here are the open source projects I have made or contributed to:</p>
+<table>
+  <tr>
+    <th>Project Title</th>
+    <th>Dates</th>
+    <th>Role</th>
+    <th>Technologies</th>
+    <th>Description</th>
+    <th>Link (if open source)</th>
+  </tr>
+  <tr>
+    <td>Workout Schedule and Weight Tracking Microservice System</td>
+    <td>2025-present</td>
+    <td>Full Stack Developer</td>
+    <td>Flutter, Angular, Spring Boot, gRPC, REST</td>
+    <td></td>
+    <td><a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></td>
+  </tr>
+  <tr>
+    <td>Distributed Real-time Lambda Streaming Processing Pipeline</td>
+    <td>2023</td>
+    <td>Spark Developer</td>
+    <td>Spark (PySpark), Kafka, Docker</td>
+    <td><ul><li>Developed statistics stream for the reviews</li></ul></td>
+    <td><a href="https://github.com/danylokravchenko/distributed-stream-pipeline">https://github.com/danylokravchenko/distributed-stream-pipeline</a></td>
+  </tr>
+</table>
 </body>
 </html>
