--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </tr>
   <tr>
     <td>Workout Schedule and Weight Tracking Microservice System</td>
-    <td>2025-present</td>
+    <td>Jul 2025-present</td>
     <td>Full Stack Developer</td>
     <td>Flutter, Angular, Spring Boot, gRPC, REST</td>
     <td></td>
@@ -31,7 +31,7 @@
   </tr>
   <tr>
     <td>Distributed Real-time Lambda Streaming Processing Pipeline</td>
-    <td>2023</td>
+    <td>Apr 2023 - May 2023</td>
     <td>Spark Developer</td>
     <td>Spark (PySpark), Kafka, Docker</td>
     <td><ul><li>Developed statistics stream for the reviews</li></ul></td>
