--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Lukas Daugaard Schröder</h1>
-<p>As a Full-Stack software engineer with a specialization in AI I am enthuasiatic in design, development and CI/CD deployment of systems with real user impact.</p>
+<p>As a Full-Stack software engineer with a specialization in AI I am enthusiastic in design, development and CI/CD deployment of systems with real user impact.</p>
 
 <p>For in-depth information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
 
