--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Lukas Daugaard Schröder</h1>
 <p>As a Full-Stack software engineer with a specialization in AI I am enthusiastic in design, development and CI/CD deployment of systems with real user impact.</p>
 
-<p>For in-depth information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
+<p>For information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
 
 <h2>Projects</h2>
 <p>To be completed. For now, here are the open source projects I have made or contributed to:</p>
