--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
 <head>
   <title>Lukas Daugaard Schröder</title>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
 </head>
 <body>
-<h1>Lukas Daugaard Schröder</h1>
-<p>As a Full-Stack software engineer with a specialization in AI I am enthusiastic in design, development and CI/CD deployment of systems with real user impact.</p>
-
-<p>For information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
-
+<div class="about-section">
+  <div class="about-text">
+    <h1>Lukas Daugaard Schröder</h1>
+    <p>As a Full-Stack software engineer with a specialization in AI I am enthusiastic in design, development and CI/CD deployment of systems with real user impact.</p>
+    <p>For information about my career and education as well as language and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
+  </div>
+  <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
+</div>
 <h2>Projects</h2>
 <p>To be completed. For now, here are the open source projects I have made or contributed to:</p>
 <table>
@@ -34,7 +38,7 @@
     <td>Apr 2023 - May 2023</td>
     <td>Spark Developer</td>
     <td>Spark (PySpark), Kafka, Docker</td>
-    <td><ul><li>Developed statistics stream for the reviews</li></ul></td>
+    <td><ul><li>Developed statistics stream for the reviews</ul></li></td>
     <td><a href="https://github.com/danylokravchenko/distributed-stream-pipeline">https://github.com/danylokravchenko/distributed-stream-pipeline</a></td>
   </tr>
 </table>
