--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <th>Role</th>
     <th>Technologies</th>
     <th>Description</th>
-    <th>Link (if open source)</th>
+    <th>Link</th>
   </tr>
   <tr>
     <td>Workout Schedule and Weight Tracking Microservice System</td>
