Add non open source projects I have worked on

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
 <h2>Projects</h2>
-<p>To be completed. For now, here are the open source projects I have made or contributed to:</p>
 <table>
   <tr>
     <th>Project Title</th>
@@ -27,7 +26,7 @@
   </tr>
   <tr>
     <td>Workout Schedule and Weight Tracking Microservice System</td>
-    <td>Jul 2025-present</td>
+    <td>Jul 2025 - present</td>
     <td>Full Stack Developer</td>
     <td>Flutter, Angular, Spring Boot, gRPC, REST</td>
     <td></td>
@@ -40,6 +39,37 @@
     <td>Spark (PySpark), Kafka, Docker</td>
     <td><ul><li>Developed statistics stream for the reviews</ul></li></td>
     <td><a href="https://github.com/danylokravchenko/distributed-stream-pipeline">https://github.com/danylokravchenko/distributed-stream-pipeline</a></td>
+  </tr>
+  <tr>
+    <td>The Danish Building and Housing Registry (BBR)</td>
+    <td>Apr 2020 - Aug 2022</td>
+    <td>Full-Stack Developer</td>
+    <td>Vue, AngularJS, ASP.NET, SQL Server, Jenkins</td>
+    <td>
+      <ul>
+        <li>Migration of frontend from AngularJS to Vue</li>
+        <li>Developed reports for governmental employees regarding classified information</li>
+        <li>Performed statistical analysis on large scale bitemporal SQL data.</li>
+        <li>Introduced Git-Flow branching strategy</li>
+        <li>Developed new full stack workflows for governmental workers</li>
+      </ul>
+    </td>
+    <td><a href="https://kombit.dk/loesninger/bbr">https://kombit.dk/loesninger/bbr</a></td>
+  </tr>
+  <tr>
+    <td>Danske Bank's OpenId Connect Enclave</td>
+    <td>Feb 2018 - Aug 2018</td>
+    <td>Full-Stack Developer</td>
+    <td>React, ASP.NET, Microservices, Jenkins</td>
+    <td>
+      <ul>
+        <li>Developed a React website for OpenID user configuration</li>
+        <li>Developed CI/CD pipelines for deployment of microservices</li>
+        <li>Developed a proof of concept for new HSM modules</li>
+        <li>Introduced Git-Flow branching strategy</li>
+      </ul>
+    </td>
+    <td></td>
   </tr>
 </table>
 </body>
