Add What I did so far in the project

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <td>Jul 2025 - present</td>
     <td>Full Stack Developer</td>
     <td>Flutter, Angular, Spring Boot, gRPC, REST</td>
-    <td></td>
+    <td>
+      <ul>
+        <li>Developed Flutter workout user app</li>
+      </ul>
+    </td>
     <td><a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></td>
   </tr>
   <tr>
@@ -37,7 +41,11 @@
     <td>Apr 2023 - May 2023</td>
     <td>Spark Developer</td>
     <td>Spark (PySpark), Kafka, Docker</td>
-    <td><ul><li>Developed statistics stream for the reviews</ul></li></td>
+    <td>
+      <ul>
+        <li>Developed statistics stream for the reviews</li>
+      </ul>  
+    </td>
     <td><a href="https://github.com/danylokravchenko/distributed-stream-pipeline">https://github.com/danylokravchenko/distributed-stream-pipeline</a></td>
   </tr>
   <tr>
