--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <td>Vue, AngularJS, ASP.NET, SQL Server, Jenkins</td>
     <td>
       <ul>
-        <li>Migration of frontend from AngularJS to Vue</li>
+        <li>Migrated frontend from AngularJS to Vue</li>
         <li>Developed reports for governmental employees regarding classified information</li>
         <li>Performed statistical analysis on large scale bitemporal SQL data.</li>
         <li>Introduced Git-Flow branching strategy</li>
