--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <td>Flutter, Angular, Spring Boot, gRPC, REST</td>
     <td>
       <ul>
-        <li>Developed Flutter workout user app</li>
+        <li>Developed Flutter mobile app</li>
       </ul>
     </td>
     <td><a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></td>
