--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li>Developed reports for governmental employees regarding classified information</li>
         <li>Performed statistical analysis on large scale bitemporal SQL data.</li>
         <li>Introduced Git-Flow branching strategy</li>
-        <li>Developed new full stack workflows for governmental workers</li>
+        <li>Designed and developed new full stack workflows for governmental workers</li>
       </ul>
     </td>
     <td><a href="https://kombit.dk/loesninger/bbr">https://kombit.dk/loesninger/bbr</a></td>
