--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <li>Introduced Git-Flow branching strategy</li>
       </ul>
     </td>
-    <td></td>
+    <td>Proprietary - details on request</td>
   </tr>
 </table>
 </body>
