--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <td>The Danish Building and Housing Registry (BBR)</td>
     <td>Apr 2020 - Aug 2022</td>
     <td>Full-Stack Developer</td>
-    <td>Vue, AngularJS, ASP.NET, SQL Server, Jenkins</td>
+    <td>Vue, AngularJS, ASP.NET, SQL Server, Jenkins, REST</td>
     <td>
       <ul>
         <li>Migrated frontend from AngularJS to Vue</li>
