--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <h1>Lukas Daugaard Schröder</h1>
     <p>As a Full-Stack software engineer with a specialization in AI I am enthusiastic in design, development and CI/CD deployment of systems with real user impact.</p>
     <p>For in-depth information about my career, education and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
+  <h2>Languages</h2>
   <ul>
-    <li>Danish: Mothertongue</li>
-    <li>German: Mothertongue</li>
+    <li>Danish: Native</li>
+    <li>German: Native</li>
     <li>English: Fluent</li>
     <li>Italian: Conversational</li>
   </ul>
