--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <li>English: Fluent</li>
     <li>Italian: Conversational</li>
   </ul>
+  <h2>Tech Stack</h2>
+  <p>Angular, React, Vue, Node.js, Spring Boot, Python, Docker, SQL, gRPC, REST<p> 
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
