--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
+<div class="section">
 <h2>Projects</h2>
 <table>
   <tr>
@@ -90,5 +91,6 @@
     <td>Proprietary - details on request</td>
   </tr>
 </table>
+</div>
 </body>
 </html>
