--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
-<div class="section">
-<h2>Projects</h2>
+<h2 class="projects-heading">Projects</h2>
 <table>
   <tr>
     <th>Project Title</th>
@@ -91,6 +90,5 @@
     <td>Proprietary - details on request</td>
   </tr>
 </table>
-</div>
 </body>
 </html>
