--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li>Italian: Conversational</li>
   </ul>
   <h2>Tech Stack</h2>
-  <p>Angular, React, Vue, Node.js, Spring Boot, Python, Docker, SQL, gRPC, REST</p> 
+  <p>Angular, React, Vue, Spring Boot, Python, Docker, SQL, gRPC, REST</p> 
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
