--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lukas Daugaard Schröder</title>
+  <title>Lukas Daugaard Schröder – Full-Stack Software Engineer</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
@@ -86,7 +86,7 @@
         <li>Introduced Git-Flow branching strategy</li>
       </ul>
     </td>
-    <td>Proprietary - details on request</td>
+    <td>Proprietary – details on request</td>
   </tr>
 </table>
 </body>
