--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="about-text">
     <h1>Lukas Daugaard Schröder</h1>
     <p>As a Full-Stack software engineer with a specialization in AI I am enthusiastic in design, development and CI/CD deployment of systems with real user impact.</p>
-    <p>For in-depth information about my career, education and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
+    <p>For in-depth information about my career, education and IT skills please visit my LinkedIn profile:<br /><a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
   <h2>Languages</h2>
   <ul>
     <li>Danish: Native</li>
