--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <p>For in-depth information about my career, education and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
   <h2>Languages</h2>
   <ul>
-    <li>Danish: Native</li>
-    <li>German: Native</li>
+    <li>Danish: Native speaker</li>
+    <li>German: Native speaker</li>
     <li>English: Fluent</li>
     <li>Italian: Conversational</li>
   </ul>
