--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="about-section">
   <div class="about-text">
     <h1>Lukas Daugaard Schröder</h1>
-    <p>As a Full-Stack software engineer with a specialization in AI, I am passionate about designing, developing, and deploying systems with real user impact.</p>
+    <p>As a Full-Stack software engineer with a specialization in AI, I am enthusiastic about designing, developing, and deploying systems with real user impact.</p>
     <p>For in-depth information about my career, education and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
   <h2>Languages</h2>
   <ul>
