--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <td>Workout Schedule and Weight Tracking Microservice System</td>
     <td>Jul 2025 - present</td>
     <td>Full Stack Developer</td>
-    <td>Angular, Flutter, Spring Boot, Docker, gRPC, REST</td>
+    <td>Angular, Flutter, Spring Boot, gRPC, REST</td>
     <td>
       <ul>
         <li>Developed Flutter mobile app</li>
