--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li>Italian: Conversational</li>
   </ul>
   <h2>Tech Stack</h2>
-  <p>Angular, React, Flutter, Spring Boot, .NET, Python, Docker, SQL, gRPC, REST</p> 
+  <p>Angular, React, Flutter, Spring Boot, ASP.NET Core, Python, SQL, Docker, Kubernetes</p> 
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
@@ -45,7 +45,7 @@
     <td>Workout Schedule and Weight Tracking Microservice System</td>
     <td>Jul 2025 - present</td>
     <td>Full Stack Developer</td>
-    <td>Angular, Flutter, Spring Boot, gRPC, REST</td>
+    <td>Angular, Flutter, Spring Boot, Kubernetes, gRPC, REST</td>
     <td>
       <ul>
         <li>Developed Flutter mobile app</li>
