--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li>Italian: Conversational</li>
   </ul>
   <h2>Tech Stack</h2>
-  <p>Angular, React, Flutter, Spring Boot, ASP.NET Core, Python, SQL, Docker, Kubernetes</p> 
+  <p>Angular/React, Flutter, Spring Boot/ASP.NET Core, SQL, Docker, Kubernetes</p> 
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
