--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <td>Danske Bank's OpenId Connect Enclave</td>
     <td>Feb 2018 - Aug 2018</td>
     <td>Full-Stack Developer</td>
-    <td>React, ASP.NET, Microservices, Jenkins</td>
+    <td>React, ASP.NET Core, Microservices, Jenkins</td>
     <td>
       <ul>
         <li>Developed a React website for OpenID user configuration</li>
