--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <td>
       <ul>
         <li>Developed Flutter mobile app</li>
-        <li>Developed Weight Progression Viewer Website</li>
+        <li>Developed Weight tracking website</li>
       </ul>
     </td>
     <td><a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></td>
@@ -70,7 +70,7 @@
     <td>The Danish Building and Housing Registry (BBR)</td>
     <td>Apr 2020 - Aug 2022</td>
     <td>Full-Stack Developer</td>
-    <td>Vue, AngularJS, ASP.NET, SQL Server, Jenkins, REST</td>
+    <td>Vue, ASP.NET, SQL Server, Jenkins, REST</td>
     <td>
       <ul>
         <li>Migrated frontend from AngularJS to Vue</li>
