--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <td>
       <ul>
         <li>Developed Flutter mobile app</li>
-        <li>Developed Weight tracking website</li>
+        <li>Developed weight tracking website</li>
       </ul>
     </td>
     <td><a href="https://github.com/LukasDS/lds-workout-system">https://github.com/LukasDS/lds-workout-system</a></td>
