--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li>Italian: Conversational</li>
   </ul>
   <h2>Tech Stack</h2>
-  <p>Vue/React, ASP.NET Core, SQL, Docker</p> 
+  <p>Vue/React, ASP.NET Core, SQL, Docker, Jenkins</p> 
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
