Add project details for Agentic Customer Contact Copilot
Added details about the Agentic Customer Contact Copilot project, including description, technologies used, and contributions.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
     <th>Link</th>
   </tr>
   <tr>
+    <td>Agentic Customer Contact Copilot</td>
+    <td>Dec 2025</td>
+    <td>AI Software Engineer</td>
+    <td>.NET 8, Semantic Kernel, OpenAI (GPT-4o), REST</td>
+    <td>
+      <ul>
+        <li>Designed an autonomous AI agent for handling complex utility customer emails</li>
+        <li>Implemented stateful orchestration for mixed intents (e.g., Meter Reading + Product Questions)</li>
+        <li>Built strict JSON-schema extraction logic to prevent LLM hallucinations</li>
+        <li>Developed 3-point authentication flows and business logic validation</li>
+      </ul>
+    </td>
+    <td><em>Private Repository (Code available upon request)</em></td>
+  </tr>
+  <tr>
     <td>Workout Schedule and Weight Tracking Microservice System</td>
     <td>Jul 2025 - present</td>
     <td>Full Stack Developer</td>
