Update title and content for AI specialization

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lukas Daugaard Schröder – Full-Stack Software Engineer</title>
+  <title>Lukas Daugaard Schröder – AI & Full Stack Engineer</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
@@ -17,7 +17,8 @@
 <div class="about-section">
   <div class="about-text">
     <h1>Lukas Daugaard Schröder</h1>
-    <p>As a Full-Stack software engineer with a specialization in AI, I am enthusiastic about designing, developing, and deploying systems with real user impact.</p>
+    <p>I am an <strong>AI & Full Stack Engineer</strong> dedicated to bridging the gap between advanced deep learning research and robust, production-grade software architecture.</p>
+    <p>With a Master's degree in AI (Distinction) and years of enterprise experience, I combine rigorous academic insight with industry-hardened engineering skills to build scalable, intelligent systems.</p>
     <p>For in-depth information about my career, education and IT skills please visit my LinkedIn profile: <a href="https://www.linkedin.com/in/lukas-daugaard-schroeder">https://www.linkedin.com/in/lukas-daugaard-schroeder</a></p>
   <h2>Languages</h2>
   <ul>
@@ -27,7 +28,8 @@
     <li>Italian: Conversational</li>
   </ul>
   <h2>Tech Stack</h2>
-  <p>Vue/React, ASP.NET Core, SQL, Docker, Jenkins</p> 
+  <p><strong>AI/ML:</strong> Microsoft Semantic Kernel, OpenAI API, PyTorch, LLMs (Fine-tuning), Hugging Face</p>
+  <p><strong>Engineering:</strong> ASP.NET Core, React/Vue, SQL Server, Docker, CI/CD</p> 
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
 </div>
