Refactor about section layout to use CSS Grid for improved responsiveness and structure

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <li>English: Fluent</li>
     <li>Italian: Conversational</li>
   </ul>
-  <h2>Tech Stack</h2>
-  <p><strong>AI/ML:</strong> Microsoft Semantic Kernel, OpenAI API, PyTorch, LLMs (Fine-tuning), Hugging Face</p>
-  <p><strong>Engineering:</strong> ASP.NET Core, React/Vue, SQL Server, Docker, CI/CD</p> 
   </div>
   <img src="portrait.png" alt="Portrait of Lukas Daugaard Schröder" class="about-image"/>
+  <div class="tech-stack">
+    <h2>Tech Stack</h2>
+   <p><strong>AI/ML:</strong> Microsoft Semantic Kernel, OpenAI API, Python, Pandas, PyTorch, LLMs (Fine-tuning)</p>
+    <p><strong>Engineering:</strong> ASP.NET Core, React/Vue, SQL Server, Docker, Jenkins</p> 
+  </div>
 </div>
 <h2 class="projects-heading">Projects</h2>
 <table>
@@ -59,8 +61,24 @@
     <td><em>Private Repository (Code available upon request)</em></td>
   </tr>
   <tr>
+    <td>Master's Thesis: Foundation Models for Genomics</td>
+    <td>Mar 2025 - Sep 2025</td>
+    <td>AI Researcher</td>
+    <td>PyTorch, Hugging Face, Python, LoRA, LLMs (Evo)</td>
+    <td>
+      <ul>
+        <li>Fine-tuned the "Evo" foundation model for CRISPR array detection</li>
+        <li>Implemented Low-Rank Adaptation (LoRA) for efficient optimization on constrained hardware</li>
+        <li>Designed end-to-end detection pipelines for DNA sequence classification</li>
+        <li><strong>Awarded highest distinction (1.0)</strong></li>
+        <li><em>Research paper currently in preparation with University of Freiburg</em></li>
+      </ul>
+    </td>
+    <td><em>Abstract available upon request (Full thesis under publication embargo)</em></td>
+  </tr>
+  <tr>
     <td>Workout Schedule and Weight Tracking Microservice System</td>
-    <td>Jul 2025 - present</td>
+    <td>Jul 2025</td>
     <td>Full Stack Developer</td>
     <td>Angular, Flutter, Spring Boot, gRPC, REST</td>
     <td>
