Update project date in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <article class="project-card">
       <div class="card-header">
         <h3>Workout & Weight Microservices</h3>
-        <span class="date">Jul 2025 - Present</span>
+        <span class="date">Jul 2025</span>
       </div>
       <p class="role">Role: <strong>Full Stack Developer</strong></p>
 
