--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="tech-stack">
     <h2>Tech Stack</h2>
     <p><strong>AI/ML:</strong> Microsoft Semantic Kernel, OpenAI API, Python, Pandas, PyTorch, LLMs (Fine-tuning)</p>
-    <p><strong>Engineering:</strong> .NET 8, ASP.NET Core, React/Vue, SQL Server, Docker, Jenkins</p> 
+    <p><strong>Engineering:</strong>ASP.NET Core, React/Vue, SQL Server, Docker, Jenkins</p> 
   </div>
 </header>
 
