--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
   <div class="tech-stack">
     <h2>Tech Stack</h2>
-    <p><strong>AI/ML:</strong> Microsoft Semantic Kernel, OpenAI API, Python, Pandas, PyTorch, LLMs (Fine-tuning)</p>
-    <p><strong>Engineering:</strong>ASP.NET Core, React/Vue, SQL Server, Docker, Jenkins</p> 
+    <p><strong>AI/ML:</strong> LangGraph, OpenAI API, Python, Pandas, PyTorch, LLMs (Fine-tuning)</p>
+    <p><strong>Engineering:</strong>TypeScript, ASP.NET Core, React/Vue, SQL Server, Docker, Jenkins</p> 
   </div>
 </header>
 
@@ -54,6 +54,32 @@
   <h2 class="section-title">Projects</h2>
   
   <div class="projects-grid">
+
+    <article class="project-card">
+      <div class="card-header">
+        <h3>LangGraph Supervisor Chatbot</h3>
+        <span class="date">Feb 2025</span>
+      </div>
+      <p class="role">Role: <strong>AI Software Engineer</strong></p>
+
+      <div class="tech-tags">
+        <span>LangGraph</span>
+        <span>FastAPI</span>
+        <span>Python</span>
+        <span>OpenAI</span>
+      </div>
+
+      <ul class="description">
+        <li>Architected a multi-agent system using a hierarchical supervisor pattern.</li>
+        <li>Implemented a "Plan-and-Execute" document agent for complex reasoning tasks.</li>
+        <li>Developed stateful conversation handling with automatic history summarization.</li>
+        <li>Built a robust asynchronous API supporting dynamic LLM provider switching.</li>
+      </ul>
+
+      <div class="card-footer">
+        <span class="private-repo">🔒 Private Repository (Code available upon request)</span>
+      </div>
+    </article>
 
     <article class="project-card featured">
       <div class="card-header">
